--- a/kustomization.yml
+++ b/kustomization.yml
@@ -1,7 +1,9 @@
 bases:
   - alice.rollout.yml
+  - bob.deployment.yml
 
 
 patchesStrategicMerge:
   - alice.overlay.rollout.yml
+  - bob.overlay.deployment.yml
 
